rename block to tbs to make it installable independently  and to rename texts

--- a/lang/en/help/site_faq.html
+++ b/lang/en/help/site_faq.html
@@ -24,11 +24,11 @@
 <p>
 <a name=authenticate><b>How do I login?</b></a>
 <menu>
-The MRBS block for Moodle assumes that you will login to Moodle and then navigate to the MRBS block.
-Once you are logged in to Moodle, you do not need to authenticate to MRBS.
+The TBS block for Moodle assumes that you will login to Moodle and then navigate to the TBS block.
+Once you are logged in to Moodle, you do not need to authenticate to TBS.
 Some functions are restricted to certain users, and other users will get the message <i>You do not have access rights to modify this item</i>.
-If you are having access issues, please read the <a href="http://docs.moodle.org/en/MRBS_block">MRBS Block Moodle Documentation</a>.
-In particular, pay attention to the instructions on using Moodle capabilities under the <a href="http://docs.moodle.org/en/MRBS_block#Installation">Installation section</a>.
+If you are having access issues, please read the <a href="http://docs.moodle.org/en/TBS_block">TBS Block Moodle Documentation</a>.
+In particular, pay attention to the instructions on using Moodle capabilities under the <a href="http://docs.moodle.org/en/TBS_block#Installation">Installation section</a>.
 See your system administrator if continue to experience difficulties.
 </menu>
 <a href="#top">Top</a><hr>
@@ -102,7 +102,7 @@ the <b>Submit</b> button wins.<br>
 <p>
 <a name="internal_external"><b>What is the difference between "Class" and "Non-Class"</b></a>
 <menu>
-By default, MRBS defines two meeting types. <b>"Class"</b> means that the meeting is being scheduled for a class of students.
+By default, TBS defines two meeting types. <b>"Class"</b> means that the meeting is being scheduled for a class of students.
 A <b>"Non-Class"</b> meeting might also be scheduled by student clubs, parent groups, etc.
 Your Moodle administrator can define up to a total of 10 meeting types, according to your needs.
 Meetings are highlighted in the main calendar view with a color corresponding to their type.
@@ -112,7 +112,7 @@ A color key of all defined types is shown at the bottom of the main calendar vie
 </p>
 
 <p>
-<a name="how_much"><b>How much did the MRBS system cost?</b></a>
+<a name="how_much"><b>How much did the TBS system cost?</b></a>
 <menu>
 Nothing.
 </menu>
@@ -122,12 +122,12 @@ Nothing.
 <p>
 <a name=about><b>How does the system work and who wrote it?</b></a>
 <menu>
-The <a href="http://sourceforge.net/projects/mrbs">Meeting Room Booking System</a>
+The <a href="http://sourceforge.net/projects/tbs">Meeting Room Booking System</a>
 is open source software that is distributed under the Gnu Public License(GPL).
 This means that software is free to use, distribute, and modify.
 <p>
-Many thanks to the original <a href="http://sourceforge.net/project/memberlist.php?group_id=5113">MRBS developers</a>.
-The MRBS code was modified and adapted for use in Moodle as a custom block by <a href="http://moodle.org/message/discussion.php?id=51473">Anthony Borrow</a> and Stephen Bourget.
+Many thanks to the original <a href="http://sourceforge.net/project/memberlist.php?group_id=5113">TBS developers</a>.
+The TBS code was modified and adapted for use in Moodle as a custom block by <a href="http://moodle.org/message/discussion.php?id=51473">Anthony Borrow</a> and Stephen Bourget.
 <p>
 The system is written mostly in <a href="http://www.php.net">PHP</a>,
 which is an open source programming language that can be embedded in web
@@ -145,10 +145,10 @@ using the <a href="http://www.linux.com">Linux</a> operating system.
 Linux, is a free, open source, unix-like operating system.
 <p>
 Combining Linux, Apache, MySQL and PHP is commonly referred to as a LAMP server.
-Every effort is made however to support using the MRBS block on as many different platforms as possible.
+Every effort is made however to support using the TBS block on as many different platforms as possible.
 The bottom line is:<br>
 <b>Every piece of this system, from the operating system to the application, is completely free - source code and all</b>.
-As such it is the combined efforts of many individuals from all over the world that allow for the free use and adaptation of the MRBS software.
+As such it is the combined efforts of many individuals from all over the world that allow for the free use and adaptation of the TBS software.
 </menu>
 <a href="#top">Top</a><hr>
 </p>
