rename some texts

--- a/lang/en/help/site_faq.html
+++ b/lang/en/help/site_faq.html
@@ -15,7 +15,7 @@
 <menu>
 <a href="#internal_external"><u>What is the difference between "Class" and "Non-Class"</u></a><br>
 </menu>
-<b>About The Meeting Room Booking System</b>
+<b>About The Meeting Class Test Booking System</b>
 <menu>
 <a href="#how_much"><u>How much did the system cost?</u></a><br>
 <a href="#about"><u>How does the system work and who wrote it?</u></a><br>
